[project]
name = "pyviz-tutorial"
version = "24.1.0"
authors = [
  { name="Veit Schiele", email="veit@cusy.io" },
]
description = "Training materials for the cusy Python training courses: https://cusy.io/en/seminars"
readme = "README.rst"
license = "BSD-3-Clause"
license-files = [ "LICENSE" ]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = []

[dependency-groups]
docs = [
    "furo",
    "ipython",
    "ipywidgets",
    "matplotlib",
    "nbsphinx",
    "sphinx<8.2",
    "sphinx-inline-tabs",
    "sphinx-lint",
    "sphinx-notfound-page",
    "sphinx-sitemap",
    "sphinx_copybutton",
    "sphinxcontrib-svg2pdfconverter",
    "sphinxext.opengraph", # matplotlib is required for social cards
]

dev = [
    { include-group = "docs" },
    "pre-commit",
    "codespell",
    "vale",
]

[project.urls]
"Homepage" = "https://github.com/veit/pyviz-tutorial/"
"Bug Tracker" = "https://github.com/veit/pyviz-tutorial/issues"

[tool.setuptools]
packages = []


[tool.codespell]
skip = "*.ipynb, ./docs/_build/*"
